Introduce virtual nodes, use a custom JGroups configuration, warn on warmup phase termination, disable L1